--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
 
+
+<html lang="en">
+
+
+    <title>book library</title>
+
+    <link rel="stylesheet" href="style.css">
+
+
+
+
+    <body>
+
+
+        <nav>
+
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="sign in ">Sign in</a></li>
+                <li> <a href="list_books"> list of books</a></li>
+                <li><a href="contact"> Contact us</a></li>
+                <li><a href="about us">About us</a></li>
+                <li>
+                    <input type="search">
+                </li>
+
+            </ul>
+        </nav>
+
+
+        <hr>
+
+        <h1>welcome to our Biblioteca book library</h1>
+
+
+        <div class="img1" >
+
+
+            <img src="imgs/wooden-table-with-blurred-background.jpg" width="350px">
+
+           
+        </div>
+
+
+    </body>
+
+
+
+</html>
