--- a/index.html
+++ b/index.html
@@ -3,13 +3,9 @@
 
 <html lang="en">
 
-
-    <title>book library</title>
-
-    <link rel="stylesheet" href="style.css">
-
-
-
+    <head>
+        <title>book library</title>
+    </head>
 
     <body>
 
@@ -18,10 +14,12 @@
 
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="sign in ">Sign in</a></li>
+                <li><a href="sign in.html">Sign in</a></li>
                 <li> <a href="list_books"> list of books</a></li>
-                <li><a href="contact"> Contact us</a></li>
-                <li><a href="about us">About us</a></li>
+                <li><a href="contact us.html"> Contact us</a></li>
+                <li><a href="about us.html">About us</a></li>
+                <li><a href="terms of use.html">Terms of Use</a></li>
+
                 <li>
                     <input type="search">
                 </li>
