--- a/sign up.html
+++ b/sign up.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <head></head>
     <body>
         <nav>
 
@@ -7,8 +8,10 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="sign in.html">Sign in</a></li>
                 <li> <a href="list_books"> list of books</a></li>
-                <li><a href="contact"> Contact us</a></li>
-                <li><a href="about us">About us</a></li>
+                <li><a href="contact us.html"> Contact us</a></li>
+                <li><a href="about us.html">About us</a></li>
+                <li><a href="terms of use.html">Terms of Use</a></li>
+
                 <li>
                     <input type="search">
                 </li>
