--- a/sign up.html
+++ b/sign up.html
@@ -1,6 +1,85 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+
+
+        <style>
+            nav {
+    background-color:lightsalmon;
+    padding: 15px;
+    margin: -8px;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 6px;
+}
+
+nav ul li {
+    display: inline;
+    margin-right: 17px;
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+}
+
+nav ul li a:hover {
+    color: #ddd;
+}
+
+
+div {
+    background-image: url('imgs/ad.jpeg');
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin:-8px;
+}
+
+form {
+    background-color: lightcyan;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 50%;
+    max-width: 500px;
+}
+
+h3 {
+    text-align: center;
+}
+
+label {
+    display: block;
+    margin-top: 10px;
+}
+
+input[type="text"],
+input[type="password"],
+input[type="email"],
+select,
+textarea {
+    width: 70%;
+    padding: 10px;
+    margin-top: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+input[type="checkbox"]{
+    margin: 10px;
+}
+input[type="file"] {
+    margin-top: 10px;
+}
+        </style>
+    </head>
     <body>
         <nav>
 
@@ -12,17 +91,16 @@
                 <li><a href="about us.html">About us</a></li>
                 <li><a href="terms of use.html">Terms of Use</a></li>
 
-                <li>
-                    <input type="search">
-                </li>
-
+             
             </ul>
         </nav>
 
         <hr>
 
         <div>
-            <form >
+            <form method="">
+
+                <h2 style="text-align: center;">sigin in </h2>
                 <label for="UserName">UserName</label>
                 <input type="text" placeholder="UserName" id="UserName" name="UserName">
                 <br>
@@ -35,8 +113,12 @@
                 <label for="email">Your Email</label>
                 <input type="email" placeholder="Your Email" id="email" name="email">
                 <br>
-                <button><a href="index.html">Sign up As an Admin</a></button>
-                <button><a href="index.html">Sign up As an User</a></button>
+                
+                <input type="checkbox" value="yes">
+                <label style="display: inline;">is_admin</label>
+                <br>
+                <button type="submit"><a href="index_admin.html">Sign up As an Admin</a></button>
+                <button><a href="index.html">Sign up A an User</a></button>
 
 
             </form>
